# Home_Work_27

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
Home_Work_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options.py  0003_remove_ad_address_ad_category_ad_image_and_more.py
ads/urls/: ad.py  cat.py
authentication/: models.py  urls.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: urls.py  views.py
companies/migrations/: 0001_initial.py
datasets/: csv_to_json.py
tests/: conftest.py  simple_test.py
tests/vacancies/: create_test.py  retrieve_test.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
vacancies/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_exp.py  0008_vacancy_update_at.py
