[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["Sergoja <sergojadesu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pillow = "^9.5.0"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
